<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp" >

    <EditText
        android:id="@+id/subject_edit_year"
        android:layout_width="334dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:ems="10"
        android:hint="@string/enter_year"
        android:inputType="numberDecimal">

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/subject_edit_production"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/enter_production"
        android:inputType="numberDecimal"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp">
    </EditText>

    <EditText
        android:id="@+id/subject_edit_yield"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_yield"
        android:inputType="numberDecimal"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp">
    </EditText>

    <Button
        android:id="@+id/add_record"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/btn_add"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"/>

</LinearLayout>