<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ListView
        android:id="@+id/list_view"
        android:layout_width="match_parent"
        android:layout_height="489dp"
        android:dividerHeight="1dp"
        android:padding="10dp"></ListView>

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/empty_list_text"/>


    <Button
        android:id="@+id/btn_add_note"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_view"
        android:layout_gravity="left"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:text="Add Note"/>

    <Button
        android:id="@+id/btn_graph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_below="@id/btn_add_note"
        android:text="@string/graph"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"/>

    <Button
        android:id="@+id/btn_more_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/list_view"
        android:layout_alignParentRight="true"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="18dp"
        android:text="@string/more" />

    <Button
        android:id="@+id/btn_average"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/btn_more_info"
        android:text="@string/average"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="18dp"
        android:layout_marginStart="18dp"/>

    <Button
        android:id="@+id/btnAgronoms"
        android:layout_width="204dp"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="3dp"
        android:background="#009688"
        android:text="Agronoms" />

    <Button
        android:id="@+id/btnMap"
        android:layout_width="204dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="3dp"
        android:layout_marginBottom="3dp"
        android:background="#009688"
        android:text="Map" />

</RelativeLayout>